# m_math

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  curvefit_bench.cpp  fft_bench.cpp  filters_bench.cpp  plane_fit_bench.cpp  run_all.cpp
cmake-modules/: FindFFTW.cmake  FindGoogleBenchmark.cmake
drafts/: CMakeLists.txt  area.cpp  contours.cpp  correlation.cpp  cov_eigen.cpp  cs_line.cpp  curvature.cpp  curvefit.cpp  detect_screen.cpp  edge_points.cpp  eigen_transform.cpp  filter.cpp  filter1d.cpp  fspecial_log.cpp  line.cpp  line_dection_3d.cpp  linefit.cpp  logpolar_fft_template_matching.cpp  mesh_smooth.cpp  mrcnn_test.cpp  obtain_certain_color_region.cpp  pcd_split.cpp  robust_gaussian_regression.cpp
examples/: CMakeLists.txt  arc.cpp  area_auto_covariance.cpp  area_opencv.cpp  arg_parser.cpp  autoc.cpp  autoc_length.cpp  bezier.cpp  circle_ellipse_to_line.cpp  connected_components.cpp  convex_hull.cpp  convolution.cpp  correlation.cpp  correlation_eigen.cpp  cov_attr.cpp  curvature.cpp  curvature_opencv.cpp  curvefit.cpp  curvefit_eigen.cpp  curvefit_opencv.cpp  cv_io.cpp  cylinder_fit.cpp  diff_opencv.cpp  distance.cpp  eigen_io.cpp  ellipsoid_fit.cpp  feret.cpp  fft.cpp  fft_eigen.cpp  fft_opencv.cpp  fft_shift.cpp  filesystem.cpp  filter.cpp  filters_opencv.cpp  filters_opencv_1.cpp  gaussian_filter.cpp  geo.cpp  geo_opencv.cpp  hist.cpp  img_tmpl_match.cpp  (+33 more)
include/: concaveman.hpp  earcut.hpp  m_arc.hpp  m_area_auto_covariance.h  m_area_opencv.h  m_autoc.h  m_bezier.hpp  m_circshift_eigen.hpp  m_convex_hull.h  m_convolution.h  m_correlation.h  m_correlation_eigen.hpp  m_cov_attr.h  m_curvature.h  m_curvature_opencv.h  m_curvefit.h  m_curvefit_eigen.h  m_curvefit_opencv.h  m_cv_io.hpp  m_cylinder_fit.hpp  m_diff_opencv.h  m_eigen_io.hpp  m_ellipsoid_fit.hpp  m_fft.h  m_fft_eigen.hpp  m_fft_opencv.h  m_fft_shift.h  m_filter.h  m_filters_opencv.h  m_filters_opencv_1.h  m_gaussian_filter.h  m_geo.h  m_geo_opencv.h  m_hist.h  m_hist_hm.h  m_img_tmpl_match.h  m_imregion_min.h  m_integration.h  m_integration_hm.h  m_interp.h  (+29 more)
mrcnn/: colors.txt
mrcnn/mask_rcnn_inception_v2_coco_2018_01_28/: mask_rcnn_inception_v2_coco_2018_01_28.pbtxt
tests/: CMakeLists.txt  run_all.cpp
utils/: example_utils.h  point.h  rand_gen.h  stopwatch.h  traits.h  utils.h
utils/io/: arg_parser.h  arg_parser_eigen.h  arg_parser_o3d.h  arg_parser_opencv.h  filesystem.h
