# drafts
function(addDraft name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    if (${ARGC} GREATER 2)
        foreach(index RANGE 2 ${lastIndex})
            target_link_libraries(${name} ${ARGV${index}})
        endforeach()
    endif()
endfunction()

addDraft(d_filter filter.cpp ${OpenCV_LIBS})
addDraft(d_curvefit curvefit.cpp ${OpenCV_LIBS})
addDraft(d_curvature curvature.cpp ${OpenCV_LIBS})
addDraft(d_correlation correlation.cpp ${OpenCV_LIBS})
addDraft(d_filter1d filter1d.cpp ${OpenCV_LIBS})
addDraft(d_area area.cpp ${OpenCV_LIBS})
addDraft(d_linefit linefit.cpp ${OpenCV_LIBS})
addDraft(d_robust_gaussian robust_gaussian_regression.cpp)