# drafts
function(addDraft name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    if (${ARGC} GREATER 2)
        foreach(index RANGE 2 ${lastIndex})
            target_link_libraries(${name} ${ARGV${index}})
        endforeach()
    endif()
endfunction()

addDraft(d_filter filter.cpp ${OpenCV_LIBS})
addDraft(d_curvefit curvefit.cpp ${OpenCV_LIBS})
addDraft(d_correlation correlation.cpp ${OpenCV_LIBS})
addDraft(d_filter1d filter1d.cpp ${OpenCV_LIBS})
addDraft(d_area area.cpp ${OpenCV_LIBS})
addDraft(d_linefit linefit.cpp ${OpenCV_LIBS})
addDraft(d_robust_gaussian robust_gaussian_regression.cpp)
addDraft(d_contours contours.cpp ${OpenCV_LIBS})
addDraft(d_line line.cpp ${OpenCV_LIBS})
addDraft(d_edge_points edge_points.cpp ${Open3D_LIBRARIES})
addDraft(d_cov_eigen cov_eigen.cpp ${Open3D_LIBRARIES})
addDraft(d_line_dection_3d line_dection_3d.cpp ${Open3D_LIBRARIES} ${OpenCV_LIBS})
addDraft(d_pcd_split pcd_split.cpp ${Open3D_LIBRARIES})
addDraft(d_cs_line cs_line.cpp ${Open3D_LIBRARIES} ${OpenCV_LIBS})
addDraft(d_eigen_transform eigen_transform.cpp ${Open3D_LIBRARIES})
addDraft(d_mesh_smooth mesh_smooth.cpp ${Open3D_LIBRARIES})
addDraft(d_mrcnn_test mrcnn_test.cpp ${OpenCV_LIBS})