# examples
function(addExample name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    foreach(index RANGE 2 ${lastIndex})
        target_link_libraries(${name} ${ARGV${index}})
    endforeach()
endfunction()

addExample(m_math math.cpp)
addExample(m_interp interp.cpp GSL::gsl GSL::gslcblas)
addExample(m_fft fft.cpp ${FFTW_LIBRARIES})
addExample(m_curvefit curvefit.cpp GSL::gsl GSL::gslcblas)
addExample(m_geo geo.cpp CGAL::CGAL GSL::gsl GSL::gslcblas)
addExample(m_peaks peaks.cpp)
addExample(m_curvature curvature.cpp GSL::gsl GSL::gslcblas)
addExample(m_filter filter.cpp GSL::gsl GSL::gslcblas)
addExample(m_peak peak.cpp)
addExample(m_p1d p1d.cpp)
addExample(m_integration integration.cpp GSL::gsl GSL::gslcblas)
addExample(m_fft_shift fft_shift.cpp ${FFTW_LIBRARIES})
addExample(m_autoc autoc.cpp ${OpenCV_LIBS})
addExample(m_hist hist.cpp GSL::gsl GSL::gslcblas)
addExample(m_fft_opencv fft_opencv.cpp ${OpenCV_LIBS})
addExample(m_p2d_opencv p2d_opencv.cpp ${OpenCV_LIBS})
addExample(m_area_opencv area_opencv.cpp ${OpenCV_LIBS})
addExample(m_distance_CGAL distance.cpp CGAL::CGAL)
addExample(m_filters_opencv filters_opencv.cpp ${OpenCV_LIBS})
addExample(m_curvefit_opencv curvefit_opencv.cpp ${OpenCV_LIBS})
addExample(m_integration_hm integration_hm.cpp)
addExample(m_correlation correlation.cpp ${OpenCV_LIBS})
addExample(m_autoc_length autoc_length.cpp ${OpenCV_LIBS})
addExample(m_stopwatch stop_watch.cpp)
addExample(m_diff_opencv diff_opencv.cpp ${OpenCV_LIBS})
addExample(m_mesh_volume_surface_area mesh_volume_surface_area.cpp ${OpenCV_LIBS})
addExample(m_geo_opencv geo_opencv.cpp ${OpenCV_LIBS})
addExample(m_io_opencv io_opencv.cpp ${OpenCV_LIBS})
addExample(m_mesh mesh.cpp ${Open3D_LIBRARIES})
addExample(m_filters_opencv_1 filters_opencv_1.cpp ${OpenCV_LIBS})