# examples
function(addExample name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    if (${ARGC} GREATER 2)
        foreach(index RANGE 2 ${lastIndex})
            target_link_libraries(${name} ${ARGV${index}})
        endforeach()
    endif()
endfunction()

addExample(m_math math.cpp)
#addExample(m_interp interp.cpp GSL::gsl GSL::gslcblas)
#addExample(m_fft fft.cpp ${FFTW_LIBRARIES})
#addExample(m_curvefit curvefit.cpp GSL::gsl GSL::gslcblas)
#addExample(m_geo geo.cpp CGAL::CGAL GSL::gsl GSL::gslcblas)
addExample(m_peaks peaks.cpp)
#addExample(m_curvature curvature.cpp GSL::gsl GSL::gslcblas)
#addExample(m_filter filter.cpp GSL::gsl GSL::gslcblas)
addExample(m_peak peak.cpp)
addExample(m_p1d p1d.cpp)
#addExample(m_integration integration.cpp GSL::gsl GSL::gslcblas)
#addExample(m_fft_shift fft_shift.cpp ${FFTW_LIBRARIES})
addExample(m_autoc autoc.cpp ${OpenCV_LIBS})
#addExample(m_hist hist.cpp GSL::gsl GSL::gslcblas)
addExample(m_fft_opencv fft_opencv.cpp ${OpenCV_LIBS})
addExample(m_p2d_opencv p2d_opencv.cpp ${OpenCV_LIBS})
addExample(m_area_opencv area_opencv.cpp ${OpenCV_LIBS})
#addExample(m_distance_CGAL distance.cpp CGAL::CGAL)
addExample(m_filters_opencv filters_opencv.cpp ${OpenCV_LIBS})
addExample(m_curvefit_opencv curvefit_opencv.cpp ${OpenCV_LIBS})
addExample(m_integration_hm integration_hm.cpp)
addExample(m_correlation correlation.cpp ${OpenCV_LIBS})
addExample(m_autoc_length autoc_length.cpp ${OpenCV_LIBS})
addExample(m_stopwatch stop_watch.cpp)
addExample(m_diff_opencv diff_opencv.cpp ${OpenCV_LIBS})
addExample(m_mesh_volume_surface_area mesh_volume_surface_area.cpp ${OpenCV_LIBS} ${Open3D_LIBRARIES})
addExample(m_geo_opencv geo_opencv.cpp ${OpenCV_LIBS})
addExample(m_io_opencv io_opencv.cpp ${OpenCV_LIBS})
addExample(m_mesh mesh.cpp ${Open3D_LIBRARIES})
addExample(m_filters_opencv_1 filters_opencv_1.cpp ${OpenCV_LIBS})
addExample(m_interp_hm interp_hm.cpp ${OpenCV_LIBS})
addExample(m_bezier bezier.cpp)
addExample(m_ellipsoid_fit ellipsoid_fit.cpp ${OpenCV_LIBS})
addExample(m_cylinder_fit cylinder_fit.cpp ${OpenCV_LIBS})
addExample(m_mesh_split mesh_split.cpp ${OpenCV_LIBS} ${Open3D_LIBRARIES})
addExample(m_img_tmpl_match img_tmpl_match.cpp ${OpenCV_LIBS})
addExample(m_mesh_compare mesh_compare.cpp ${Open3D_LIBRARIES})
addExample(m_plane_fit plane_fit.cpp ${OpenCV_LIBS})
addExample(m_curvefit_eigen curvefit_eigen.cpp ${OpenCV_LIBS})
addExample(m_fft_eigen fft_eigen.cpp)
addExample(m_correlation_eigen correlation_eigen.cpp ${OpenCV_LIBS})
addExample(m_p1d_eigen p1d_eigen.cpp)
addExample(m_plane_seg_open3d plane_seg_open3d.cpp ${Open3D_LIBRARIES})
addExample(m_linefit linefit.cpp ${OpenCV_LIBS})
addExample(m_mr mr.cpp ${OpenCV_LIBS})
addExample(m_cov_attr cov_attr.cpp ${Open3D_LIBRARIES})
addExample(m_filesystem filesystem.cpp)
addExample(m_arg_parser arg_parser.cpp ${OpenCV_LIBS})
addExample(m_robust_gaussian_regression robust_gaussian_regression.cpp ${OpenCV_LIBS})
addExample(m_gaussian_filter gaussian_filter.cpp ${OpenCV_LIBS})
addExample(m_convolution convolution.cpp)
addExample(m_pt_in_polygon pt_in_polygon.cpp)
addExample(m_feret feret.cpp ${OpenCV_LIBS})
addExample(m_mesh_cut mesh_cut.cpp ${OpenCV_LIBS} ${Open3D_LIBRARIES})

# handle eigen installed by brew on APPLE
if (NOT USE_OPEN3D AND APPLE)
    target_link_libraries(m_plane_fit Eigen3::Eigen)
    target_link_libraries(m_curvefit_eigen Eigen3::Eigen)
    target_link_libraries(m_fft_eigen Eigen3::Eigen)
    target_link_libraries(m_correlation_eigen Eigen3::Eigen)
    target_link_libraries(m_p1d_eigen Eigen3::Eigen)
    target_link_libraries(m_linefit Eigen3::Eigen)
    target_link_libraries(m_arg_parser Eigen3::Eigen)
    target_link_libraries(m_robust_gaussian_regression Eigen3::Eigen)
endif()

if (OpenMP_CXX_FOUND)
        target_link_libraries(m_fft_eigen OpenMP::OpenMP_CXX)
endif()

# TBB
if (USE_TBBMALLOC)
	target_link_libraries(m_mesh_volume_surface_area TBB::tbbmalloc TBB::tbbmalloc_proxy)
endif()
